2009-06-19  Robert Dewar  <dewar@adacore.com>

	* g-cgi.adb: Minor reformatting

2009-06-19  Eric Botcazou  <ebotcazou@adacore.com>

	* s-intman-solaris.adb (Notify_Exception): Do not discriminate on the
	signal code for SIGFPE and raise Program_Error for SIGILL.

	* s-osinte-solaris.ads: Remove signal code constants for SIGFPE.

2009-06-19  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch8.adb (Nvis_Messages): Do not list an entity declared in a
	generic package if there is a visibility candidate that is declared in
	a regular package.

2009-06-18  Olivier Hainque  <hainque@adacore.com>

	* system-aix64.ads: New file.
	* gcc-interface/Makefile.in (aix LIBGNAT_TARGET_PAIRS): Use the
	64bit system.ads for ppc64 multilib variants.

2009-06-16  Robert Dewar  <dewar@adacore.com>
            Olivier Hainque  <hainque@adacore.com>

	Relax constraints on Machine_Attribute argument types:
	* sem_prag.adb (Check_Arg_Is_Static_Expression): Allow for
	missing type.
	(Analyze_Attribute, case Machine_Attribute): Allow any type for arg 3.
	* gcc-interface/decl.c (prepend_attributes): Accept static
	expressions of any type as attribute arguments, not only string
	literals.
	* gnat_rm.texi (pragma Machine_Attribute section): Adjust to reflect
	the relaxation of the restriction on the Info argument type.
	
2009-06-13  Aldy Hernandez  <aldyh@redhat.com>

	* gcc-interface/utils.c (record_builtin_type): Pass location
	argument to build_decl.
	(create_type_stub_decl): Same.
	(create_type_decl): Same.
	(create_var_decl_1): Same.
	(create_field_decl): Same.
	(create_param_decl): Same.
	(create_label_decl): Same.
	(create_subprog_decl): Same.
	* gcc-interface/decl.c (gnat_to_gnu_entity): Same.
	* gcc-interface/trans.c (Case_Statement_to_gnu): Pass location
	argument to create_artificial_label.
	(Loop_Statement_to_gnu): Same.
	(Subprogram_Body_to_gnu): Same.
	(gnat_gimplify_stmt): Same.

2009-06-11  Richard Henderson  <rth@redhat.com>
